--- a/css/main.css
+++ b/css/main.css
@@ -458,51 +458,58 @@ section#flex-wrap-section {
 
 /* align-content */
 section#align-content-section {
-  /* place your code here */
+  display: flex;
 }
 
 /* Fixed heights have been set in the .wrap-content-parent-container code blocks */
 
 .align-content-center-parent-container {
-  /* place your code here */
+  display: flex;
+  align-content: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
   height: 250px;
 }
 
 .align-content-space-between-parent-container {
-  /* place your code here */
+  display: flex;
+  align-content: space-between;
   justify-content: space-evenly;
   flex-wrap: wrap;
   height: 250px;
 }
 
 .align-content-space-around-parent-container {
-  /* place your code here */
+  display: flex;
+  align-content: space-around;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
 .align-content-space-evenly-parent-container {
-  /* place your code here */
+  display: flex;
+  align-content: space-evenly;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
 .align-content-stretch-parent-container {
-  /* place your code here */
+  display: flex;
+  align-content: stretch;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
 .align-content-flex-start-parent-container {
-  /* place your code here */
+  display: flex;
+  align-content: flex-start;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
 .align-content-flex-end-parent-container {
-  /* place your code here */
+  display: flex;
+  align-content: flex-end;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
@@ -511,21 +518,24 @@ section#align-content-section {
 
 /* gap */
 section#gap-section {
-  /* place your code here */
+  display: flex;
 }
 
 .gap-parent-container {
-  /* display: flex; */
+  display: flex;
+  gap: 20px;
   flex-wrap: wrap;
 }
 
 .row-gap-parent-container {
-  /* display: flex; */
+  display: flex;
+  row-gap: 20px;
   flex-wrap: wrap;
 }
 
 .column-gap-parent-container {
-  /* place your code here */
+  display: flex;
+  column-gap: 20px;
   flex-wrap: wrap;
 }
 
