--- a/css/main.css
+++ b/css/main.css
@@ -636,10 +636,11 @@ section#flex-flow-section {
 /* flex section */
 section#flex-content-section {
   /* place your code here */
+  display: flex;
 }
 
 .flex-row-parent-container {
-  /* Add display: flex; to make this div a parent flex container */
+  display: flex;
 }
 
 .child-flex-basis-box {
@@ -673,68 +674,68 @@ section#flex-content-section {
 
 /* order */
 section#order-section {
-  /* place your code here */
+  display: flex;
 }
 
 .order-parent-container {
-  /* Add display: flex; to make this div a parent flex container */
+  display: flex;
   justify-content: space-around;
 }
 
 .order-child-flex-item-1 {
-  /* place your code here */
+  order: 3;
 }
 
 .order-child-flex-item-2 {
-  /* place your code here */
+  order: 5;
 }
 
 .order-child-flex-item-3 {
-  /* place your code here */
+  order: 1;
 }
 
 .order-child-flex-item-4 {
-  /* place your code here */
+  order: 2;
 }
 
 .order-child-flex-item-5 {
-  /* place your code here */
+  order: 4;
 }
 
 /* end order */
 
 /* align-self */
 section#align-self-section {
-  /* place your code here */
+  display: flex;
 }
 
 .align-self-parent-container {
-  /* Add display: flex; to make this div a parent flex container */
+  display: flex;
   justify-content: space-around;
 }
 
 .align-self-auto-child-flex-item {
-  /* place your code here */
+  align-self: auto;
 }
 
 .align-self-flex-start-child-flex-item {
-  /* place your code here */
+  align-self: flex-start;
 }
 
 .align-self-flex-end-child-flex-item {
-  /* place your code here */
+  align-self: flex-end;
 }
 
 .align-self-center-child-flex-item {
-  /* place your code here */
+  align-self: center;
 }
 
 .align-self-baseline-child-flex-item {
-  /* place your code here */
+  align-self: baseline;
 }
 
 .align-self-stretch-child-flex-item {
-  /* place your code here */
+  align-self: stretch;
 }
 
 /* end align-self */
